--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
   --primary-color: #fff;
   --shodow: rgba(60, 66, 87, 0.12) 0px 0px 14px 0px,
     rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
+  --errors: red;
 }
 
 #main-container {
